<resources>
    <string name="app_name">Kd tu mah?</string>

    <!-- MainActivity -->
    <string name="main_activity_title">Kd tu mah? - Github</string>
    <string name="user_search_button_text">Pesquisar usuários</string>
    <string name="repository_search_button_text">Pesquisar repositórios</string>

    <!-- UserSearchActivity -->
    <string name="user_search_activity_title">Busca de Usuários</string>
    <string name="user_search_text_hint">Digite o nome do usuário</string>
    <string name="user_search_search_button_text">Pesquisar</string>
    <string name="user_search_no_results_message">Usuário não encontrado</string>
    <string name="user_search_view">Digite um usuário</string>

    <!-- RepositorySearchActivity -->
    <string name="repository_search_activity_title">Busca de Repositórios</string>
    <string name="repository_search_text_hint">Digite o nome do repositório</string>
    <string name="repository_search_search_button_text">Pesquisar</string>
    <string name="repository_search_no_results_message">Usuário não encontrado</string>
    <string name="repository_name_label">Repositório: </string>
    <string name="repository_owner_name_label">Dono: </string>

    <!-- UserProfileActivity -->
    <string name="user_profile_activity_title">Perfil</string>
    <string name="user_profile_user_repositories_label">Repositórios</string>
    <string name="user_profile_no_repositories_message">Esse usuário não possui repositórios</string>
    <string name="user_profile_open_home_text">Perfil completo</string>

    <!-- RepositoryProfileActivity -->
    <string name="repository_profile_activity_title">Repositório</string>
    <string name="repository_profile_owner_name_label">Dono:</string>
    <string name="repository_profile_description_label">Descrição:</string>
    <string name="repository_profile_language_label">Linguagem de programação:</string>
    <string name="repository_profile_private_label">Privado:</string>
    <string name="repository_profile_open_home_text">Abrir página do repositório</string>
    <string name="imageGituhb">image_github</string>
    <string name="tvAppTheme">Kd Tu Mah? - Github</string>
    <string name="user_list_row_login">Login:</string>
    <string name="user_site">Site:</string>

</resources>
