<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.UserProfileActivity">

    <ImageView
        android:id="@+id/user_profile_user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/user_profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/user_profile_user_avatar"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@android:string/unknownName" />

    <Button
        android:id="@+id/user_profile_open_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile_open_home_text"
        android:layout_below="@+id/user_profile_user_name"
        android:layout_alignRight="@+id/user_profile_user_name"
        android:layout_alignEnd="@+id/user_profile_user_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="30dp"
        android:layout_below="@+id/user_profile_user_avatar"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/user_profile_user_repositories_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/user_profile_user_repositories_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/user_profile_no_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/user_profile_no_repositories_message"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:visibility="gone"
            tools:text="@android:string/unknownName" />

        <ListView
            android:id="@+id/user_profile_user_repositories_list"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ListView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/user_profile_repositories_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
